Fix problème contraste couleur

--- a/src/components/FormContact.css
+++ b/src/components/FormContact.css
@@ -49,7 +49,7 @@ input {
     border-radius: 20px;
     border: none;
     background-color: #76b900;
-    color: #eee;
+    color: #1A1A1A;
     margin-top: 2rem;
     cursor: pointer;
 }
