--- a/src/styles/Home.css
+++ b/src/styles/Home.css
@@ -26,11 +26,16 @@
     cursor: pointer;
     margin: auto;
     text-decoration: none;
-    color: #eee;
+    color: #1A1A1A;
     padding: 15px;
     background-color: #76b900;
     border-radius: 20px;
     font-size: 1.3em;
+}
+
+.link:hover {
+    transform: scale(1.2);
+    transition: 0.5s;
 }
 
 @media screen and (max-width: 1023px) {
